test/nostdlib/classcast1.good
classcast1.chpl:12: error: attempt to dereference nil
